--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
 
     <!--WebActivity.java-->
     <string name="w_tip">已经是首页啦！</string>
-    <string name="w_shareTip">该页面不支持分享，请点击话题介绍进入分享!</string>
+    <string name="w_shareTip">该页面不支持分享，请点击话题名称进入分享!</string>
     <string name="w_exit_app">再按一次退出应用</string>
 
 
@@ -81,5 +81,6 @@
     <string name="VIDEO_DROPPED_FRAMECOUNT">当前直播视频流丢帧总数:</string>
     <string name="AUDIO_DATA">音频流已发送数据量:</string>
     <string name="logo_90_40">水印设置(默认微谷官方水印,最优尺寸90*40)</string>
+    <string name="check_net">请检查您的网络!</string>
 
 </resources>
