会员推流逻辑改变

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="c_backPressed">直播过程中不能返回,请先停止直播！</string>
     <string name="c_member_pushStreamTime">您此次推流的时间已到，请重新进入开始推流！</string>
     <string name="c_member_count_error">记次失败，请重新进入开始推流</string>
-    <string name="c_member_overdue">您的会员已过期，请重新充值会员！</string>
+    <string name="c_member_overdue">您的会员已过期，请续费或充值会员！</string>
     <string name="c_member_shortage">您的号外棒不足，请充值！</string>
 
     <!--WebActivity.java-->
@@ -82,5 +82,15 @@
     <string name="AUDIO_DATA">音频流已发送数据量:</string>
     <string name="logo_90_40">水印设置(默认微谷官方水印,最优尺寸90*40)</string>
     <string name="check_net">请检查您的网络!</string>
+    <string name="start_push_stream">请点击右侧录制按钮开始(结束)直播</string>
+    <string name="c_illegal_operation">参数错误，非法操作</string>
+    <string name="wx_authorization_login">微信授权登录</string>
+    <string name="wx_not_install">您还没安装微信，请安装后重试！</string>
+    <string name="wx_logining">正在登录...</string>
+    <string name="new_version_download">新版本正在下载</string>
+    <string name="check_version">检测到新版本</string>
+    <string name="button_positive">抢先体验</string>
+    <string name="button_cancel">遗憾错过</string>
+    <string name="app_download">应用正在下载,请稍等...</string>
 
 </resources>
